feature(net, rpc):
- 修改 app 作为服务名为在 net 定义时自定服务名

--- a/tny-game-net-demo/src/main/resources/application-client.yml
+++ b/tny-game-net-demo/src/main/resources/application-client.yml
@@ -13,7 +13,7 @@ spring:
 tny:
   app:
     name: GameClientApp
-    app-type: game-client
+    app-type: client
     scope-type: online
   net:
     bootstrap:
@@ -42,9 +42,10 @@ tny:
     rpc:
       client:
         services:
-          - name: DemoRpcService
+          - name: game-service
             host: 127.0.0.1
             port: 16800
+            username: game-client
 
   data:
     object-storage:
