--- a/tny-game-net-demo/src/main/resources/application-relay-game-server.yml
+++ b/tny-game-net-demo/src/main/resources/application-relay-game-server.yml
@@ -34,6 +34,7 @@ tny:
         offline-max-size: 1000
 
   data:
-    storage:
-      enable: false
+    object-storage:
+      async-storage:
+        enable: false
 
