--- a/tny-game-net-demo/src/main/resources/application-relay-game-server.yml
+++ b/tny-game-net-demo/src/main/resources/application-relay-game-server.yml
@@ -5,6 +5,21 @@ tny:
     scope-type: online
   net:
     bootstrap:
+      network:
+        server:
+          name: game-service
+          bind-address: 127.0.0.1:16800
+          channel:
+            encoder:
+              message-body-codec: typeProtobufMessageBodyCodec
+              security-keys:
+                - abcdefghijklmn
+                - opqrstuvwxyz
+            decoder:
+              message-body-codec: typeProtobufMessageBodyCodec
+              security-keys:
+                - abcdefghijklmn
+                - opqrstuvwxyz
       relay:
         server:
           name: game-server
@@ -29,12 +44,37 @@ tny:
             threads: 4
     endpoint:
       session-keeper:
-        name: user
         offline-close-delay: 1000
         offline-max-size: 1000
+  datasource:
+    mongodb:
+      setting:
+        uri: "${uc.mongodb.uri:mongodb://ucenter:ucenter0626@127.0.0.1:27018/tny-framework-demo?authSource=admin&minPoolSize=4&maxIdleTimeMS=60000}"
+        #        uri: "${uc.mongodb.uri:mongodb://ucenter:ucenter0626@192.168.2.103:27017/tny-framework-demo?authSource=admin&minPoolSize=4&maxIdleTimeMS=60000}"
+        auto-index-creation: true
+    redisson:
+      setting:
+        host: '${r2.redis.host:127.0.0.1}'
+        password: '${r2.redis.password:tNbrH3NSErGd}'
+        port: '${r2.redis.post:6379}'
+        database: '${r2.redis.db:9}'
 
   data:
+    object-cache:
+      recycler:
+        scheduled-recycler:
+          scheduled:
+            recycle-interval-time: 50000
+    storage-accessor:
+      redisson-accessor:
+        accessor:
+          table-head: "tny:demo:sever"
+    store-executor:
+      fork-join:
+        enable: true
+        idle-interval: 3000
     object-storage:
       async-storage:
-        enable: false
-
+        storage:
+          accessor-factory: mongoClientStorageAccessorFactory
+          store-executor: forkJoinAsyncObjectStoreExecutor
