--- a/tny-game-basics/src/main/resources/META-INF/tny-factory.properties
+++ b/tny-game-basics/src/main/resources/META-INF/tny-factory.properties
@@ -6,15 +6,15 @@ com.tny.game.loader.EnumLoader=\
   com.tny.game.basics.item.behavior.Behavior,\
   com.tny.game.basics.item.behavior.DemandType,\
   com.tny.game.basics.item.behavior.DemandParam,\
-  com.tny.game.basics.module.Module,\
+  com.tny.game.basics.module.Moduler,\
   com.tny.game.basics.module.Feature,\
-  com.tny.game.basics.module.OpenMode
+  com.tny.game.basics.module.FeatureOpenMode
 
 # ClassSelectorProvider
 com.tny.game.scanner.annotation.ClassSelectorProvider=\
   com.tny.game.basics.item.probability.RandomCreatorLoader,\
   com.tny.game.basics.item.GameBaseEnumClassLoader,\
-  com.tny.game.basics.module.GameModuleEnumClassLoader
+  com.tny.game.basics.module.FeatureEnumClassLoader
 
 com.tny.game.common.result.ResultCode=\
   com.tny.game.basics.exception.ItemResultCode
