--- a/tny-game-loader/src/main/resources/META-INF/tny-factory.properties
+++ b/tny-game-loader/src/main/resources/META-INF/tny-factory.properties
@@ -1,4 +1,4 @@
 com.tny.game.scanner.annotation.ClassSelectorProvider=\
   com.tny.game.loader.EnumLoader,\
-  com.tny.game.loader.EnumIdentifiableCheckLoader,\
+  com.tny.game.loader.EnumerableCheckLoader,\
   com.tny.game.loader.ResultCodeCheckLoader
