--- a/tny-game-suite/build.gradle
+++ b/tny-game-suite/build.gradle
@@ -5,13 +5,10 @@ apply plugin: "maven"
 
 dependencies {
 
-    testCompile 'com.h2database:h2:1.4.182'
-    provided 'javax.servlet:javax.servlet-api:3.0.1'
-
     compile(
-            libs.'jade',
             libs.'druid',
             libs.'guava',
+            project(":tny-game-common"),
             project(":tny-game-expr-mvel"),
             project(":tny-game-base"),
             project(":tny-game-doc"),
@@ -25,5 +22,9 @@ dependencies {
             project(":tny-game-oplog-log4j2kafka"),
 //            project(":tny-game-net-kafka")
     )
+
+    testCompile 'com.h2database:h2:1.4.182'
+    provided 'javax.servlet:javax.servlet-api:3.0.1'
+
 
 }
