--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
-RELEASE_REPOSITORY_URL=http://maven.lingqugame.net/repository/maven-releases
-SNAPSHOT_REPOSITORY_URL=http://maven.lingqugame.net/repository/maven-snapshots
+RELEASE_REPOSITORY_URL=https://m2.tunaiyi.com/repository/maven-snapshots/
+SNAPSHOT_REPOSITORY_URL=https://m2.tunaiyi.com/repository/maven-snapshots
