--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,8 @@ RELEASE_REPOSITORY_URL=https://m2.tnydev.com/repository/maven-releases/
 SNAPSHOT_REPOSITORY_URL=https://m2.tnydev.com/repository/maven-snapshots/
 org.gradle.parallel=true
 org.gradle.daemon=true
-org.gradle.caching=true
-org.gradle.priority=low
-org.gradle.workers.max=4
+#org.gradle.caching=true
+org.gradle.workers.max=2
 org.gradle.configureondemand=true
 #org.gradle.unsafe.configuration-cache=true
 #org.gradle.jvmargs=-Xms256m -Xmx2048m -XX:MaxPermSize=512m -XX:+UseG1GC -XX:MaxMetaspaceSize=256m -XX:InitiatingHeapOccupancyPercent=70 -XX:ReservedCodeCacheSize=240m -XX:+UseCompressedOops -Dfile.encoding=UTF-8 -XX:SoftRefLRUPolicyMSPerMB=50
