--- a/build.gradle
+++ b/build.gradle
@@ -63,9 +63,9 @@ configure(allprojects) {
 
     repositories {
         mavenLocal()
-        maven { url "https://m2.tnydev.com/repository/maven-public/" }
-        maven { url "https://maven.aliyun.com/repository/spring" }
         maven { url "https://maven.aliyun.com/repository/public" }
+        maven { url "https://maven.aliyun.com/repository/spring" }
+        maven { url "https://m2.tnydev.com/repository/maven-public/" }
         maven { url "https://maven.aliyun.com/repository/central" }
         maven { url "https://maven.aliyun.com/repository/google" }
         maven { url "https://maven.aliyun.com/repository/jcenter" }
@@ -124,7 +124,10 @@ configure(javaProjects) {
 
     sourceCompatibility = "${javaVersion}"
     targetCompatibility = "${javaVersion}"
-
+    compileJava {
+        sourceCompatibility = "${javaVersion}"
+        targetCompatibility = "${javaVersion}"
+    }
     task createProject {
         doLast {
             sourceSets*.java.srcDirs*.each { it.mkdirs() }
