--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 RELEASE_REPOSITORY_URL=https://m2.tnydev.com/repository/maven-releases/
 SNAPSHOT_REPOSITORY_URL=https://m2.tnydev.com/repository/maven-snapshots/
 org.gradle.parallel=true
-org.gradle.daemon=true
+org.gradle.daemon=false
 #org.gradle.caching=true
 org.gradle.workers.max=4
 org.gradle.configureondemand=true
@@ -17,7 +17,6 @@ encoding=UTF-8
 #===================================
 #   Dependencies Versions
 #===================================
-jacksonVersion=2.13.2.1
 springCloudVersion=2020.0.5
 springBootVersion=2.4.13
 alibabaCloudVersion=2021.1
