--- a/tny-game-net-demo/src/main/resources/application-server.yml
+++ b/tny-game-net-demo/src/main/resources/application-server.yml
@@ -33,7 +33,7 @@ tny:
             threads: 4
     endpoint:
       session-keeper-settings:
-        user:
+        _user:
           offline-close-delay: 1000
           offline-max-size: 1000
   datasource:
