feature: 创建namespace项目  接入 etcd, 实现 etcd 的namespace

--- a/settings.gradle
+++ b/settings.gradle
@@ -73,6 +73,7 @@ include 'tny-game-protobuf'
 
 include 'tny-game-namnspace'
 include 'tny-game-namnspace-etcd'
+include 'tny-game-starter-namnspace'
 //include 'tny-game-suite'
 
 include 'tny-game-data'
