feature: etcd 增加一致性 hash

--- a/tny-game-namnspace-etcd/build.gradle
+++ b/tny-game-namnspace-etcd/build.gradle
@@ -4,6 +4,6 @@ dependencies {
 
     api libs.jetcd_core
 
-    testImplementation project(":tny-game-codec-jackson")
+    api project(":tny-game-codec-jackson")
 }
 
