--- a/tny-game-namnspace/build.gradle
+++ b/tny-game-namnspace/build.gradle
@@ -2,6 +2,6 @@ dependencies {
 
     api project(":tny-game-common-lang")
     api project(":tny-game-codec")
-
+    api 'net.openhft:zero-allocation-hashing:0.15'
 }
 
