--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version "${springBootVersion}" apply false
     id 'io.spring.dependency-management' version '1.0.11.RELEASE' apply false
     id "com.baidu.jprotobuf" version "1.2.1" apply false
+    id "com.gradle.plugin-publish" version "0.16.0" apply false
 }
 
 apply from: "${rootDir}/gradle/dependency.gradle"
@@ -73,7 +74,7 @@ configure(gradleProjects) {
     apply plugin: 'groovy'
     apply plugin: 'java-library'
     apply plugin: 'maven-publish'
-    apply from: "${rootDir}/gradle/publications.gradle"
+    apply from: "${rootDir}/gradle/publish.gradle"
 
     configurations {
         all {
