--- a/gradle/publications.gradle
+++ b/gradle/publications.gradle
@@ -1,12 +1,7 @@
 apply plugin: "maven-publish"
 
-
+apply from: "$rootDir/gradle/publish.gradle"
 apply from: "$rootDir/gradle/dependency.gradle"
-
-ext.RELEASE_REPOSITORY_URL = hasProperty('RELEASE_REPOSITORY_URL') ? RELEASE_REPOSITORY_URL : ""
-ext.SNAPSHOT_REPOSITORY_URL = hasProperty('SNAPSHOT_REPOSITORY_URL') ? SNAPSHOT_REPOSITORY_URL : ""
-ext.NEXUS_USERNAME = hasProperty('NEXUS_USERNAME') ? NEXUS_USERNAME : ""
-ext.NEXUS_PASSWORD = hasProperty('NEXUS_PASSWORD') ? NEXUS_PASSWORD : ""
 
 publishing {
 
@@ -67,17 +62,3 @@ publishing {
         }
     }
 }
-
-//configureDeploymentRepository(project)
-//
-//void configureDeploymentRepository(Project project) {
-//    project.plugins.withType(MavenPublishPlugin.class).all {
-//        PublishingExtension publishing = project.getExtensions().getByType(PublishingExtension.class);
-//        if (project.hasProperty("deploymentRepository")) {
-//            publishing.repositories.maven {
-//                it.url = project.property("deploymentRepository")
-//                it.name = "deployment"
-//            }
-//        }
-//    }
-//}
